

  * rsvg is now rsvg-convert

1.0.3 (2011-12-17)

  * Bug fix with problems on Ubuntu 11.10+Unity

  * Documentation for random values in questions

  * Uses jobname argument to allow easy use of lualatex

  * Allows simple arguments for latex engine

  * Bug fix with questions which are not in every subject.

  * Bug fix with global scoring strategies (such as SUF=x)

  * Use pdftk to split PDF pages instead of ImageMagick, which uses
    too much memory

  * Upside down scans are detected and put up back

1.0.2 (2011-10-09)

  * Bug fix with questions which are not in every subject.

1.0.1 (2011-10-02)

  * Post-correction mode now available: correct answers are not given
    in the LaTeX file, but with the teacher completed answer sheet scan.

  * New command AMCcodeH

1.0 (2011-09-18)

  * Arabic I18N and templates, thanks to Ali Hatim

  * single PDF with all annotated sheets is now available

0.541 (2011-07-19)

  * personnal templates can now be made easily

  * new marks export format: PDF list

0.523 (2011-07-09)

  * warnings for some current mistakes in LaTeX

  * AMCformS to get the same subject for everybody (to be photocopied)
    and print only the answer sheets.

  * diagnostic image for unrecognized scans

  * rewritten AMCcode. It is now more robust and customizable, but
    users will have to adapt their LaTeX sources to get the same layout

  * annotation text for each question can be customized

0.504 (2011-06-09)

  * PDF scans are now accepted

  * new options insidebox, outsidebox

  * Use Pango/Cairo for annotation (better for non-english characters)

0.492 (2011-06-01)

  * Fittings for MacPorts/BSD

0.487 (2011-05-30)

  * Fittings to be used with arabxetex

0.483 (2011-05-25)

  * Prepared for installation with MacPorts

  * spec file corrections

  * Small bug fixes

0.458 (2011-04-14)

  * New scoring parameter mz

  * Documentation update, with man pages for AMC-* commands

  * LaTeX style documentation and cleanup
