@@ -1,4 +1,5 @@
 
+  * Bug fix with manual association window scrollbars
 
   * rsvg is now rsvg-convert
 
